# projekt-2-Endriu1984

include/: CMakeLists.txt  Car.hpp  Engine.hpp  Exceptions.hpp  Gearbox.hpp
src/: main.cpp
